refactor app archi

--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -33,6 +33,7 @@ description = Description
 
 email = Email
 
+error.email_in_use           = This email is already in use. Choose another one. 
 error.email_invalid          = Email is not valid.
 error.password_confirm_empty = Confirmation password can not be empty.
 error.password_mismatch      = Passwords do not match.
