--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,23 +1,20 @@
-debug=false
-logging.level=WARN
-logging.level.web=DEBUG
+logging.level.root=ERROR
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
 logging.level.com.kderyabin=DEBUG
-# Application properties
-app.mail.send=true
-# MVC
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
 # Database
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
-#spring.datasource.pool-size=2
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.pool-size=1
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+# MVC
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.open-in-view=false
 # Mail
 spring.mail.host=smtp.orange.fr
 spring.mail.port=465
@@ -28,7 +25,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-# TLS 
 #spring.mail.properties.mail.smtp.starttls.enable=true
 # SSL, post 465
 spring.mail.properties.mail.smtp.socketFactory.port = 465
