--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,9 @@ logging.level.root=ERROR
 logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
 logging.level.com.kderyabin=DEBUG
+# Application properties
+app.mail.send=true
+app.host=http://localhost:8080
 # Database
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
@@ -18,8 +21,8 @@ spring.jpa.open-in-view=false
 # Mail
 spring.mail.host=smtp.orange.fr
 spring.mail.port=465
-spring.mail.username=${mail_username}
-spring.mail.password=${mail_password}
+spring.mail.username=${MAIL_USER}
+spring.mail.password=${MAIL_PASS}
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
