confirm and password reset

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 debug=false
-logging.level=WARN
+logging.level.org.springframework=INFO
 logging.level.web=DEBUG
 logging.level.com.kderyabin=DEBUG
 # Application properties
 app.mail.send=false
+app.mail.senderEmail=kderyabin@orange.fr
 app.host=http://localhost:8080
 app.salt=HSIjedufjf9é)@
 # MVC
