--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,17 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 # Database
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+#spring.datasource.url=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=admin
 #spring.datasource.pool-size=2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.multiTenancy=DATABASE
+spring.jpa.properties.hibernate.multi_tenant_connection_provider=com.kderyabin.web.storage.multitenancy.MultiTenantConnectionProvider
+spring.jpa.properties.hibernate.tenant_identifier_resolver=com.kderyabin.web.storage.multitenancy.TenantIdentifierResolver
 #spring.jpa.properties.hibernate.generate_statistics=true
 # Mail
 spring.mail.host=smtp.orange.fr
@@ -36,5 +39,5 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # SSL, post 465
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-# Templating
+# Templating disable for the web rendering
 spring.thymeleaf.enabled=false
