--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,18 +3,22 @@ logging.level.org.springframework=INFO
 logging.level.org.hibernate=INFO
 logging.level.com.kderyabin=DEBUG
 # Application properties
-app.mail.send=true
+app.mail.send=false
+app.mail.senderEmail=kderyabin@orange.fr
 app.host=http://localhost:8080
+app.salt=HSIjedufjf9é)@
 # Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.pool-size=1
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.pool-size=1
+#spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.multi_tenant_connection_provider=com.kderyabin.web.storage.multitenancy.MultiTenantConnectionProvider
+spring.jpa.properties.hibernate.tenant_identifier_resolver=com.kderyabin.web.storage.multitenancy.TenantIdentifierResolver
 # MVC
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
