db multitenency ok

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,6 @@
 logging.level.root=ERROR
 logging.level.org.springframework=INFO
+ogging.level.web=DEBUG
 logging.level.org.hibernate=INFO
 logging.level.com.kderyabin=DEBUG
 # Application properties
@@ -7,20 +8,45 @@ app.mail.send=false
 app.mail.senderEmail=kderyabin@orange.fr
 app.host=http://localhost:8080
 app.salt=HSIjedufjf9é)@
+app.user.schema.filename=user.schema.mysql.sql
+app.database.type=MYSQL
 # Database
-spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#app.datasource.jdbcUrl=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
+#app.datasource.username=root
+#app.datasource.password=admin
+#app.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#app.user.datasource.url=jdbc:mysql://localhost:3307/%s?serverTimezone=UTC
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=none
+# spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.jdbcUrl=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;
 #spring.datasource.username=sa
 #spring.datasource.password=
-#spring.datasource.pool-size=1
+#spring.datasource.jdbcUrl=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.datasource.pool-size=1
 #spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.multi_tenant_connection_provider=com.kderyabin.web.storage.multitenancy.MultiTenantConnectionProvider
-spring.jpa.properties.hibernate.tenant_identifier_resolver=com.kderyabin.web.storage.multitenancy.TenantIdentifierResolver
+#spring.app.datasource.jdbcUrl=jdbc:h2:mem:app;DB_CLOSE_DELAY=-1;
+#spring.app.datasource.jdbcUrl=jdbc:mysql://localhost:3307/%s?serverTimezone=UTC
+#spring.app.datasource.url=jdbc:mysql://localhost:3307/%s?serverTimezone=UTC
+#spring.app.datasource.username=sa
+#spring.app.datasource.password=
+#spring.app.datasource.username=root
+#spring.app.datasource.password=admin
+##spring.app.datasource.pool-size=1
+#spring.app.datasource.driver-class-name=org.h2.Driver
+#spring.app.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.multiTenancy=DATABASE
+#spring.jpa.properties.hibernate.multi_tenant_connection_provider=com.kderyabin.web.storage.multitenancy.MultiTenantConnectionProvider
+#spring.jpa.properties.hibernate.tenant_identifier_resolver=com.kderyabin.web.storage.multitenancy.TenantIdentifierResolver
+#spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.properties.hibernate.format_sql=true
 # MVC
-spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 # Mail
 spring.mail.host=smtp.orange.fr
