--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,25 @@
 debug=false
+logging.level.root=ERROR
 logging.level.org.springframework=INFO
-logging.level.web=DEBUG
+logging.level.org.hibernate=INFO
 logging.level.com.kderyabin=DEBUG
 # Application properties
 app.mail.send=false
 app.mail.senderEmail=kderyabin@orange.fr
 app.host=http://localhost:8080
 app.salt=HSIjedufjf9é)@
+app.user.schema.filename=user.schema.mysql.sql
+app.database.type=MYSQL
 # MVC
+spring.jpa.open-in-view=false
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 # Database
+spring.datasource.initialization-mode=never
 spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
 #spring.datasource.pool-size=2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -27,8 +32,8 @@ spring.jpa.properties.hibernate.tenant_identifier_resolver=com.kderyabin.web.sto
 # Mail
 spring.mail.host=smtp.orange.fr
 spring.mail.port=465
-spring.mail.username=username
-spring.mail.password=password
+spring.mail.username=${MAIL_USER}
+spring.mail.password=${MAIL_PASS}
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
