--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,19 +8,18 @@ app.mail.send=false
 app.mail.senderEmail=kderyabin@orange.fr
 app.host=http://localhost:8080
 app.salt=HSIjedufjf9é)@
-app.user.schema.filename=user.schema.mysql.sql
+app.user.schema.filename=schema.user.mysql.sql
 app.database.type=MYSQL
 # MVC
 spring.jpa.open-in-view=false
 spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.suffix=.jsp
 # Database
 spring.datasource.initialization-mode=never
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
-#spring.datasource.pool-size=2
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.show_sql=true
