--- a/src/test/resources/hibernate-db-main.properties
+++ b/src/test/resources/hibernate-db-main.properties
@@ -1,5 +1,6 @@
-hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
-hibernate.connection.url=jdbc:mysql://localhost:3307/sharings?serverTimezone=UTC
-hibernate.connection.username=root
-hibernate.connection.password=admin
-hibernate.dialect==org.hibernate.dialect.MySQLDialect
+hibernate.connection.driver_class=org.h2.Driver
+hibernate.connection.url=jdbc:h2:mem:sharings;DB_CLOSE_DELAY=-1;MODE=MySQL
+hibernate.connection.username=sa
+hibernate.connection.password=
+hibernate.dialect==org.hibernate.dialect.H2Dialect
+hibernate.ddl-auto=create-drop
