--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ app.mail.send=false
 app.mail.senderEmail=kderyabin@orange.fr
 app.host=http://localhost:8080
 app.salt=HSIjedufjf9é)@
-app.user.schema.filename=schema.user.mysql.sql
-app.database.type=MYSQL
+app.user.schema.filename=schema.user.sql
 # MVC
 spring.jpa.open-in-view=false
 spring.mvc.view.prefix=/WEB-INF/jsp/
